Add include filters and keep json ordered
refs #27
