# nb2/api.py
@@ -1,7 +1,7 @@
-from flask import Blueprint, jsonify, request
+from flask import Blueprint, request
 
 from nb2 import db
-from nb2.errors import conflict, does_not_exist_error, validation_error
+from nb2.api_utils import conflict, does_not_exist_error, make_json_response, validation_error
 from nb2.models import Person
 
 bp = Blueprint('api', __name__)
@@ -14,18 +14,25 @@ def hello():
 
 @bp.route('/people', methods=['GET'])
 def get_all_people():
-    return jsonify([person.serialize() for person in Person.query.all()])
+    include_filters = request.args.get('include', '').split(',')
+
+    return make_json_response([
+        person.serialize(includes=include_filters)
+        for person
+        in Person.query.all()
+    ])
 
 
 @bp.route('/people/<slack_user_id>', methods=['GET'])
 def get_person(slack_user_id):
+    include_filters = request.args.get('include', '').split(',')
     person = Person.query.filter_by(slack_user_id=slack_user_id).first()
 
     if person is None:
         error_msg = f"Person with slack_user_id {slack_user_id} does not exist"
         return does_not_exist_error(error_msg)
 
-    return jsonify(person.serialize())
+    return make_json_response(person.serialize(includes=include_filters))
 
 
 @bp.route('/people', methods=['POST'])
@@ -48,7 +55,7 @@ def create_person():
     db.session.commit()
     db.session.refresh(new_person)
 
-    response = jsonify(new_person.serialize())
+    response = make_json_response(new_person.serialize())
     response.status_code = 201
 
     return response
